millville ballot fix and videos update index page

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -232,11 +232,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -277,11 +277,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -322,11 +322,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -367,11 +367,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -412,11 +412,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -457,11 +457,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -503,11 +503,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -548,11 +548,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -593,11 +593,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -638,11 +638,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -683,11 +683,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -728,11 +728,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -773,11 +773,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -786,7 +786,7 @@
                                 <p>Independent</p> 
                             </div>
                             <div class="first-name">
-                                <a href="Candidates/summers.html">David</a>
+                                <a href="Candidates/green.html">Rachel</a>
                             </div>
                             <div class="number-a-and-circle"> 
                                 <p>1J</p>
@@ -795,7 +795,7 @@
                         </div>
                         <div class="a-row-2">
                             <div class="last-name push-down-last-name">
-                                <a href="Candidates/summers.html">Summers</a>
+                                <a href="Candidates/green.html">Green</a>
                             </div>
                         </div>
                         <div class="a-row-3">
@@ -844,11 +844,11 @@
                     <div class="office-title">
                         <div class="ot-english">
                             <p>Millville City Commissioners</p>
-                            <p>Vote for One</p>
+                            <p>Vote for Five</p>
                         </div>
                         <div class="ot-espanol">
                             <p>Junta Comisionados del Empleados</p>
-                            <p>Vota por Uno</p>
+                            <p>Vota por Cinco</p>
                         </div>
                     </div>
                     <div class="a">
@@ -921,11 +921,11 @@
                 <div class="office-title">
                     <div class="ot-english">
                         <p>Millville City Commissioners</p>
-                        <p>Vote for Two</p>
+                        <p>Vote for Five</p>
                     </div>
                     <div class="ot-espanol">
                         <p>Junta Comisionados del Empleados</p>
-                        <p>Vota por Dos</p>
+                        <p>Vota por Cinco</p>
                     </div>
                 </div>
                 <div class="a">
