--- a/child_pages/cc-elections/Candidates/green.html
+++ b/child_pages/cc-elections/Candidates/green.html
@@ -124,7 +124,12 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">Rachel Green</h6>
               <p>
-                
+                Rachel Green is running for Millville City Commissioner on a platform emphasizing community engagement, public safety, economic growth, and education. Drawing on 
+                decades of leadership in education, social justice advocacy, and organizational management, she frames her campaign around grassroots involvement and transparent 
+                governance. Her agenda—adapted from her campaign’s “Opportunities” section—focuses on beautifying public spaces, fostering safer neighborhoods through 
+                community-based policing, improving access to social and economic resources, revitalizing Millville’s economy, and expanding career and technical education 
+                for students. While her campaign messaging highlights strong values of inclusivity and collaboration, it leaves some ambiguity about whether these priorities 
+                are immediate community opportunities for involvement or future policy initiatives she intends to advance if elected.
               </p>
             </div>
         </dialog>
@@ -166,7 +171,7 @@
      <div class="candidate-pic-box">
          <img class="cover" src="../../../assets/candidates/green.avif" class="candidate-pic">
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                  <a href="https://www.facebook.com/profile.php?id=61578671877460" target="_blank" rel="noopener noreferrer" class="website-link"><button class="candidate-ext-site">Facebook Campaign Site</button></a>
@@ -199,6 +204,13 @@
 
         <h4 class="sub-heading">Overall Agenda and Positions</h4>
         <div class="experience can-sec">
+            <p style="font-style: italic; font-size: 0.95em; margin-bottom: 1em;">
+                <strong>Note:</strong> These agenda items are adapted from Rachel Green’s “Opportunities” section on her campaign site. 
+                It isn’t fully clear whether these are existing opportunities for residents to get involved or aspirational plans she intends to pursue as a commissioner. 
+                They are presented here to give voters a picture of potential priorities.
+            </p>
+            <br>
+            <br>
             <ul>
                 <li>
                     <details>
@@ -211,9 +223,13 @@
                         Proposed Actions:
                         <ul>
                             <li>Improve the appearance of key streets, parks, and public areas.</li>
+                            <br>
                             <li>Engage residents, schools, and businesses in community clean-ups and maintenance.</li>
+                            <br>
                             <li>Add sustainable landscaping, native plants, and seasonal flowers.</li>
+                            <br>
                             <li>Reduce litter and improve upkeep through prevention, removal, and public education.</li>
+                            <br>
                             <li>Create attractive gathering spots with benches, planters, murals, and public art.</li>
                         </ul>
                     </p>
@@ -231,9 +247,13 @@
                         Proposed Actions:
                         <ul>
                             <li>Reduce crime and violence through prevention and community collaboration.</li>
+                            <br>
                             <li>Build trust and transparency between police and residents.</li>
+                            <br>
                             <li>Address underlying health and social factors that contribute to crime.</li>
+                            <br>
                             <li>Promote safe, walkable neighborhoods for all ages.</li>
+                            <br>
                             <li>Empower residents to take an active role in public safety.</li>
                         </ul>
                     </p>
@@ -251,9 +271,13 @@
                         Proposed Actions:
                         <ul>
                             <li>Make social, health, and economic resources easy to find and use.</li>
+                            <br>
                             <li>Bridge gaps between services through coordination and referrals.</li>
+                            <br>
                             <li>Empower residents with education, skills, and connections.</li>
+                            <br>
                             <li>Build stronger partnerships across sectors (health, housing, schools, nonprofits, faith, businesses).</li>
+                            <br>
                             <li>Measure and improve community well-being.</li>
                         </ul>
                     </p>
@@ -271,9 +295,13 @@
                         Proposed Actions:
                         <ul>
                             <li>Attract and retain businesses that diversify Millville’s economy.</li>
+                            <br>
                             <li>Support small business growth and entrepreneurship.</li>
+                            <br>
                             <li>Revitalize downtown and underutilized areas.</li>
+                            <br>
                             <li>Build a skilled local workforce ready for emerging industries.</li>
+                            <br>
                             <li>Strengthen Millville’s reputation as a great place to live, work, and invest.</li>
                         </ul>
                     </p>
@@ -291,9 +319,13 @@
                         Proposed Actions:
                         <ul>
                             <li>Improve student academic outcomes and close achievement gaps.</li>
+                            <br>
                             <li>Expand career and technical education (CTE) opportunities aligned with local jobs.</li>
+                            <br>
                             <li>Recruit, retain, and support high-quality teachers and staff.</li>
+                            <br>
                             <li>Strengthen partnerships with local businesses, colleges, and training providers.</li>
+                            <br>
                             <li>Engage families and the community as partners in student success.</li>
                         </ul>
                     </p>
