get involved update 2

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -128,6 +128,7 @@
         <div class="main-content-box-with-shadow-gi">
             <h1 class="get-involved-h1">Onboard Yourself: Get Started (or Re-Started) in Local Elections</h1>
             <h2>Your One-Hour(ish) Crash Course to Plug Into Cumberland County Politics</h2>
+            <br>
             <h3 class="get-involved-intro-heading">Introduction</h3>
             <div class="get-involved-intro-content">
                 Whether you’re brand new to local politics or you’ve been paying attention but still feel like you’re missing pieces, you’re not alone. 
@@ -147,10 +148,30 @@
                         <strong>Step 1: Plug Into the Players & the Process:</strong>  
                         The most practical first step is to follow the people and groups shaping our local elections.  
                         <ul class="gi-ul">
-                            <li class="gi-ul-li">Check out our <a href="candidates.html">consolidated Candidates page</a> to see who’s running in your district. Click through to their websites and social media pages, and follow them on at least one platform. Even if you don’t agree with them, you need to know what they’re saying.</li>
-                            <li class="gi-ul-li">Follow your current elected officials: County Commissioners, Township Committee members, Mayor, School Board members, and State Legislators. Subscribe to their official pages and public forums.</li>
-                            <li class="gi-ul-li">Subscribe to the YouTube channels or bookmark the pages where your county, township, and school board post <strong>videos, agendas, and meeting minutes</strong>. These are the best way to stay updated without attending every meeting.</li>
-                            <li class="gi-ul-li">Follow the local parties and coalitions: <a href="https://www.facebook.com/groups/442220931182672">Cumberland County Democrats</a>, <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP</a>, and other active civic or issue-based groups. These groups often post events, discussions, and candidate info you won’t find elsewhere.</li>
+                            <li class="gi-ul-li">Check out our candidates pages to see who’s running in your district. Click through to their websites and social media pages, 
+                                and follow them on their social media platforms. Even if you don’t agree with them, you need to know what they’re saying, especially in a district 
+                                without a robust press. Some local leaders have said "We need to become our own press.", and that's fair.</li>
+                            <li class="gi-ul-li">
+                                <strong>Follow your current elected officials:</strong>  
+                                County websites will tell you who holds office, but they won’t help you follow them day-to-day. We’ve done the digging so you don’t have to:  
+                                <br><br>
+                                <ul class="gi-ul">
+                                    <li><strong>County Commissioners:</strong> <a href="https://cumberlandcountynj.gov/commissioners/">Official Page</a> — See their bios and contact links. <br>
+                                    Want updates? We’ve cataloged their <a href="commissioners-social.html">social media pages here</a> (where they exist).</li>
+                                    <li><strong>City/Township Leaders:</strong> <a href="https://www.vinelandcity.org/mayor-council/">Vineland Mayor & Council</a> (and check your township’s site for your own governing body). <br>
+                                    We also list their active social media accounts <a href="municipal-social.html">here</a>.</li>
+                                    <li><strong>School Boards:</strong> <a href="https://www.vineland.org/">Vineland Board of Education</a> — Check the official site for meeting info. Subscribe to their <a href="https://www.youtube.com/@vinelandpublicschools1991">YouTube channel</a> for meeting uploads.</li>
+                                    <li><strong>State Legislators:</strong> Use the <a href="https://www.njleg.state.nj.us/">NJ Legislature search tool</a> to find your Assembly and Senate reps. We’re also building a <a href="state-social.html">directory of their social media pages</a>.</li>
+                                </ul>
+                                <br>
+                                <p>Use the official links for formal contact, and our curated social media directory for real-time updates. In a county with limited press coverage, following them directly is often the only way to know what they’re doing.</p>
+                            </li>
+                            <li class="gi-ul-li">Subscribe to the YouTube channels or bookmark the pages where your county, township, and school board post 
+                                <strong>videos, agendas, and meeting minutes</strong>. These are the best way to stay updated without attending every meeting.</li>
+                            <li class="gi-ul-li">Follow the local parties and coalitions: 
+                                <a href="https://www.facebook.com/groups/442220931182672">Cumberland County Democrats</a>, 
+                                <a href="https://www.facebook.com/CumberlandNJGOP">Cumberland County GOP</a>, and other active civic or issue-based groups. 
+                                These groups often post events, discussions, and candidate info you won’t find elsewhere.</li>
                         </ul>
                     </li>
 
