crafting the onboarding page 1

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -145,12 +145,43 @@
             <div class="get-involved-steps-content">
                 <ol class="gi-ol">
                     <li class="gl-li">
+
                         <strong>Step 1: Plug Into the Players & the Process:</strong>  
-                        The most practical first step is to follow the people and groups shaping our local elections.  
+                        The most practical first step is to follow the people and groups shaping our local elections. Go through the list and follow the candidates on their 
+                        social media pages.
                         <ul class="gi-ul">
-                            <li class="gi-ul-li">Check out our candidates pages to see who’s running in your district. Click through to their websites and social media pages, 
-                                and follow them on their social media platforms. Even if you don’t agree with them, you need to know what they’re saying, especially in a district 
-                                without a robust press. Some local leaders have said "We need to become our own press.", and that's fair.</li>
+                            <li class="gi-ul-li">
+                                <details>
+                                    <summary><strong>County Commissioners</strong></summary>
+                                    <div style="margin-left: 20px;">
+
+                                        <details>
+                                            <summary><strong>John Capizola</strong></summary>
+                                            <div style="margin-left: 20px;">
+                                                <p>Follow John Capizola:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank">Facebook (Campaign)</a></li>
+                                                    <li><a href="https://www.facebook.com/johnnycaps" target="_blank">Facebook (Personal)</a></li>
+                                                    <li><a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank">Instagram</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                        <details>
+                                            <summary><strong>Yolanda Balicki</strong></summary>
+                                            <div style="margin-left: 20px;">
+                                                <p>Follow Yolanda Garcia Balicki:</p>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank">Facebook (Campaign)</a></li>
+                                                    <li><a href="https://www.facebook.com/yolanda.garcia.balicki.2025/" target="_blank">Facebook (Personal)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+
+                                    </div>
+                                </details>
+                            </li>
+
                             <li class="gi-ul-li">
                                 <strong>Follow your current elected officials:</strong>  
                                 County websites will tell you who holds office, but they won’t help you follow them day-to-day. We’ve done the digging so you don’t have to:  
