style fix test onboarding page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -22,6 +22,24 @@
 
   gtag('config', 'G-64FQD2P8BV');
 </script>
+<style>
+        details summary {
+            color: #007BFF; /* Link-style blue */
+            cursor: pointer; /* Hand cursor */
+            font-weight: bold;
+            margin: 5px 0;
+        }
+        details summary:hover {
+            text-decoration: underline; /* Adds underline on hover */
+        }
+        details ul li a {
+            color: #007BFF; /* Link blue for social links */
+            text-decoration: none;
+        }
+        details ul li a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
 
