--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -23,23 +23,33 @@
   gtag('config', 'G-64FQD2P8BV');
 </script>
 <style>
-        details summary {
-            color: #007BFF; /* Link-style blue */
-            cursor: pointer; /* Hand cursor */
-            font-weight: bold;
-            margin: 5px 0;
-        }
-        details summary:hover {
-            text-decoration: underline; /* Adds underline on hover */
-        }
-        details ul li a {
-            color: #007BFF; /* Link blue for social links */
-            text-decoration: none;
-        }
-        details ul li a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    /* General foldout styling */
+    details summary {
+        cursor: pointer;
+        font-weight: bold;
+        margin: 5px 0;
+    }
+    details summary:hover {
+        text-decoration: underline;
+    }
+    details ul li a {
+        text-decoration: none;
+    }
+    details ul li a:hover {
+        text-decoration: underline;
+    }
+
+    /* Colors */
+    .category-summary {
+        color: #800080; /* Purple for neutral categories */
+    }
+    .dem-summary, .dem-links a {
+        color: #007BFF; /* Blue for Democrats */
+    }
+    .rep-summary, .rep-links a {
+        color: #B22222; /* Red for Republicans */
+    }
+</style>
 </head>
 
 
@@ -168,39 +178,43 @@
                     <li class="gl-li">
 
                         <strong>Step 1: Plug Into the Players & the Process:</strong>  
-                        The most practical first step is to follow the people and groups shaping our local elections. Go through the list and follow the candidates on their 
-                        social media pages.
+                        The most practical first step is to follow the people and groups shaping our local elections. Go through the list and follow the candidates 
+                        and related parties on their social media pages.
                         <ul class="gi-ul">
                             <li class="gi-ul-li">
+
                                 <details>
-                                    <summary><strong>County Commissioners</strong></summary>
+                                    <summary class="category-summary"><strong>County Commissioners</strong></summary>
                                     <div style="margin-left: 20px;">
 
                                         <details>
-                                            <summary><strong>John Capizola</strong></summary>
-                                            <div style="margin-left: 20px;">
+                                            <summary class="dem-summary">John Capizola (Democrat)</summary>
+                                            <div class="dem-links" style="margin-left: 20px;">
                                                 <p>Follow John Capizola:</p>
                                                 <ul>
                                                     <li><a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank">Facebook (Campaign)</a></li>
                                                     <li><a href="https://www.facebook.com/johnnycaps" target="_blank">Facebook (Personal)</a></li>
                                                     <li><a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank">Instagram</a></li>
+                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Cumberland County Democrats (Party Page)</a></li>
                                                 </ul>
                                             </div>
                                         </details>
 
                                         <details>
-                                            <summary><strong>Yolanda Balicki</strong></summary>
-                                            <div style="margin-left: 20px;">
+                                            <summary class="dem-summary">Yolanda Balicki (Democrat)</summary>
+                                            <div class="dem-links" style="margin-left: 20px;">
                                                 <p>Follow Yolanda Garcia Balicki:</p>
                                                 <ul>
                                                     <li><a href="https://www.facebook.com/profile.php?id=61574930323850" target="_blank">Facebook (Campaign)</a></li>
                                                     <li><a href="https://www.facebook.com/yolanda.garcia.balicki.2025/" target="_blank">Facebook (Personal)</a></li>
+                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Cumberland County Democrats (Party Page)</a></li>
                                                 </ul>
                                             </div>
                                         </details>
 
                                     </div>
                                 </details>
+
                             </li>
 
                             <li class="gi-ul-li">
