homescreen icon test

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -202,7 +202,7 @@
                                                     <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Cumberland County Democrats (Party Page)</a></li>
                                                     <br>
                                                     <li><a href="https://cumberlandnjdems.com/" target="_blank">Cumberland County Democrats (Official Website)</a> — 
-                                                        <em>Bookmark this page and periodically check for event postings and announcements. If they offer a newsletter, sign up.</em>
+                                                        <em>Bookmark this page and periodically check for updates. If they offer a newsletter, sign up.</em>
                                                     </li>
                                                 </ul>
                                             </div>
