--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Anton+SC&display=swap" rel="stylesheet">
         <link rel="preload" href="assets/blue_court.jpg" as="image" type="image/jpg" />
+        <link rel="apple-touch-icon" href="/assets/homescreenIcon/informSquareLogo.png">
+        <link rel="icon" sizes="512x512" href="/assets/homescreenIcon/informSquareLogo.png">
         <script src="homepage_scripts.js" async></script>
         <!-- Begin preview image meta tags -->
         <meta property="og:title" content="Inform The Vote NJ">
