lods and albrecht added to onboarding page

--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -222,6 +222,36 @@
                                                 </ul>
                                             </div>
                                         </details>
+                                        <br>
+                                        <details>
+                                            <summary class="rep-summary">Douglas Albrecht (Republican)</summary>
+                                            <div class="rep-links" style="margin-left: 20px;">
+                                                <p>Follow Douglas Albrecht:</p>
+                                                <br>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/p/Albrecht-Lods-for-County-Commissioner-100080324467171/" target="_blank">Facebook (Campaign)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/douglas.albrecht.92" target="_blank">Facebook (Personal)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.ccrrogop.org" target="_blank">Cumberland County GOP (Party Website)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
+                                        <br>
+                                        <details>
+                                            <summary class="rep-summary">Victoria Lods (Republican)</summary>
+                                            <div class="rep-links" style="margin-left: 20px;">
+                                                <p>Follow Victoria Lods:</p>
+                                                <br>
+                                                <ul>
+                                                    <li><a href="https://www.facebook.com/p/Albrecht-Lods-for-County-Commissioner-100080324467171/" target="_blank">Facebook (Campaign)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/victoria.groetschlods" target="_blank">Facebook (Personal)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.ccrrogop.org" target="_blank">Cumberland County GOP (Party Website)</a></li>
+                                                </ul>
+                                            </div>
+                                        </details>
 
                                     </div>
                                 </details>
