--- a/child_pages/get-involved.html
+++ b/child_pages/get-involved.html
@@ -178,8 +178,8 @@
                     <li class="gl-li">
 
                         <strong>Step 1: Plug Into the Players & the Process:</strong>  
-                        The most practical first step is to follow the people and groups shaping our local elections. Go through the list and follow the candidates 
-                        and related parties on their social media pages.
+                        The most practical first step is to follow the people and groups shaping our local elections. Go through the list, follow the available social media pages,
+                        bookmark websites on desktop, and add websites to your home screen on your smartphone.
                         <ul class="gi-ul">
                             <li class="gi-ul-li">
 
@@ -197,13 +197,11 @@
                                                     <br>
                                                     <li><a href="https://www.facebook.com/johnnycaps" target="_blank">Facebook (Personal)</a></li>
                                                     <br>
+                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Facebook (Party)</a></li>
+                                                    <br>
                                                     <li><a href="https://www.instagram.com/jcapizola/?hl=en" target="_blank">Instagram</a></li>
                                                     <br>
-                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Cumberland County Democrats (Party Page)</a></li>
-                                                    <br>
-                                                    <li><a href="https://cumberlandnjdems.com/" target="_blank">Cumberland County Democrats (Official Website)</a> — 
-                                                        <em>Bookmark this page and periodically check for updates. If they offer a newsletter, sign up.</em>
-                                                    </li>
+                                                    <li><a href="https://cumberlandnjdems.com/" target="_blank">Cumberland County Democrats (Official Website)</a></li>
                                                 </ul>
                                             </div>
                                         </details>
@@ -218,7 +216,9 @@
                                                     <br>
                                                     <li><a href="https://www.facebook.com/yolanda.garcia.balicki.2025/" target="_blank">Facebook (Personal)</a></li>
                                                     <br>
-                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Cumberland County Democrats (Party Page)</a></li>
+                                                    <li><a href="https://www.facebook.com/groups/442220931182672" target="_blank">Facebook (Party)</a></li>
+                                                    <br>
+                                                    <li><a href="https://cumberlandnjdems.com/" target="_blank">Cumberland County Democrats (Official Website)</a></li>
                                                 </ul>
                                             </div>
                                         </details>
@@ -232,6 +232,8 @@
                                                     <li><a href="https://www.facebook.com/p/Albrecht-Lods-for-County-Commissioner-100080324467171/" target="_blank">Facebook (Campaign)</a></li>
                                                     <br>
                                                     <li><a href="https://www.facebook.com/douglas.albrecht.92" target="_blank">Facebook (Personal)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/CumberlandNJGOP" target="_blank">Facebook (Party)</a></li>
                                                     <br>
                                                     <li><a href="https://www.ccrrogop.org" target="_blank">Cumberland County GOP (Party Website)</a></li>
                                                 </ul>
@@ -247,6 +249,8 @@
                                                     <li><a href="https://www.facebook.com/p/Albrecht-Lods-for-County-Commissioner-100080324467171/" target="_blank">Facebook (Campaign)</a></li>
                                                     <br>
                                                     <li><a href="https://www.facebook.com/victoria.groetschlods" target="_blank">Facebook (Personal)</a></li>
+                                                    <br>
+                                                    <li><a href="https://www.facebook.com/CumberlandNJGOP" target="_blank">Facebook (Party)</a></li>
                                                     <br>
                                                     <li><a href="https://www.ccrrogop.org" target="_blank">Cumberland County GOP (Party Website)</a></li>
                                                 </ul>
